# rust-sourcebundler

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  omnilint.yml  rust.yml
example/: Cargo.toml  build.rs
example/src/: example_core.rs  example_tests.rs  lib.rs
src/: bundler.rs  lib.rs  rust_bundler.rs
tests/: build.rs  golden.rs
tests/testdata/input/basic/: Cargo.toml
tests/testdata/input/basic/src/: lib.rs  main.rs
tests/testdata/input/complicated/: Cargo.toml
tests/testdata/input/complicated/src/: a.rs  b.rs  main.rs
tests/testdata/input/complicated/src/c/: d.rs  mod.rs
tests/testdata/input/hello-world/: Cargo.toml
tests/testdata/input/usecrate/: Cargo.toml
tests/testdata/input/usecrate/src/: lib.rs  main.rs  submod1.rs  submod2.rs  submod3.rs  submod4.rs
tests/testdata/output/: basic.rs  complicated.rs  usecrate.rs
