[package]
name = "rustsourcebundler"
version = "0.14.0"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
description = "Bundle the source code of a rust cargo crate in a single source file"
license = "MIT"
homepage = "https://github.com/lpenz/rust-sourcebundler"
repository = "https://github.com/lpenz/rust-sourcebundler.git"
edition = "2021"
categories = ["command-line-utilities"]
keywords = ["single-file", "bundle", "merge", "source", "build"]

[dependencies]
regex = "1.11.1"
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
cargo_toml = "0.21.0"

[dev-dependencies]
goldenfile = "1.7.3"
tempfile = "3.14.0"

