[package]
name = "rustsourcebundler"
version = "0.14.1"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
description = "Bundle the source code of a rust cargo crate in a single source file"
license = "MIT"
homepage = "https://github.com/lpenz/rust-sourcebundler"
repository = "https://github.com/lpenz/rust-sourcebundler.git"
edition = "2021"
categories = ["command-line-utilities"]
keywords = ["single-file", "bundle", "merge", "source", "build"]

[dependencies]
regex = "1.11.1"
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
cargo_toml = "0.22.1"

[dev-dependencies]
goldenfile = "1.8.0"
tempfile = "3.19.0"

